Attempt to correctly align rows for cards

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,7 @@
 body {
     font-family: "Source Code Pro";
 }
+
+.new-note-input {
+    height: 300px;
+}
